--- a/public/documentation.html
+++ b/public/documentation.html
@@ -64,8 +64,9 @@
           <td>POST</td>
           <td>-</td>
           <td>
-            A JSON object holding data about the user to add, structured like: {
-            "name" : "Nat", movies:{favorites:[], watched:[]} }.
+            A JSON object holding data about the user to add, structured like:{
+            Username: req.body.Username, Password: req.body.Password, Email:
+            req.body.Email, Birthday: req.body.Birthday, }.
           </td>
           <td>
             A JSON object holding data about the user that was added to the list
@@ -77,7 +78,11 @@
           <td>/users/:id</td>
           <td>PUT</td>
           <td>:id</td>
-          <td>-</td>
+          <td>
+            A JSON object holding data about the user to add, structured like:{
+            Username: req.body.Username, Password: req.body.Password, Email:
+            req.body.Email, Birthday: req.body.Birthday, }.
+          </td>
           <td>
             A JSON object holding the data about the updated user information.
           </td>
@@ -89,8 +94,7 @@
           <td>:id, movieID</td>
           <td>-</td>
           <td>
-            A JSON object holding the data about the movie that was added to the
-            user.
+            A JSON object of the user with the user's favorite movies updated.
           </td>
         </tr>
         <tr>
@@ -100,8 +104,8 @@
           <td>:id, :movieID</td>
           <td>-</td>
           <td>
-            A JSON object holding data about the the movie that was removed from
-            the user.
+            A JSON object showing that the data from the user's favorite movie
+            was deleted.
           </td>
         </tr>
         <tr>
@@ -110,7 +114,7 @@
           <td>DELETE</td>
           <td>:Username</td>
           <td>-</td>
-          <td>A JSON object holding data about the user removed</td>
+          <td>A response confirming that the user was removed.</td>
         </tr>
       </tbody>
     </table>
